// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser if statements block if allows 'then' to be skipped 1`] = `
Array [
  If {
    "condition": Binary {
      "left": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 1,
        },
      },
      "right": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 2,
        },
      },
      "token": Object {
        "isReserved": false,
        "kind": 15,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "<",
      },
    },
    "elseBranch": Block {
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 21,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "value": Literal {
            "value": BrsBoolean {
              "kind": 1,
              "value": false,
            },
          },
        },
      ],
    },
    "elseIfs": Array [
      Object {
        "condition": Binary {
          "left": Literal {
            "value": Int32 {
              "kind": 3,
              "value": 1,
            },
          },
          "right": Literal {
            "value": Int32 {
              "kind": 3,
              "value": 2,
            },
          },
          "token": Object {
            "isReserved": false,
            "kind": 17,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": ">",
          },
        },
        "thenBranch": Block {
          "statements": Array [
            Assignment {
              "name": Object {
                "isReserved": false,
                "kind": 21,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "foo",
              },
              "value": Literal {
                "value": Int32 {
                  "kind": 3,
                  "value": 3,
                },
              },
            },
            Assignment {
              "name": Object {
                "isReserved": false,
                "kind": 21,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "bar",
              },
              "value": Literal {
                "value": BrsBoolean {
                  "kind": 1,
                  "value": true,
                },
              },
            },
          ],
        },
      },
    ],
    "thenBranch": Block {
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 21,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "value": Literal {
            "value": BrsBoolean {
              "kind": 1,
              "value": true,
            },
          },
        },
      ],
    },
  },
]
`;

exports[`parser if statements block if parses if only 1`] = `
Array [
  If {
    "condition": Binary {
      "left": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 1,
        },
      },
      "right": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 2,
        },
      },
      "token": Object {
        "isReserved": false,
        "kind": 15,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "<",
      },
    },
    "elseBranch": undefined,
    "elseIfs": Array [],
    "thenBranch": Block {
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 21,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "value": Literal {
            "value": BrsBoolean {
              "kind": 1,
              "value": true,
            },
          },
        },
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 21,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "bar",
          },
          "value": Literal {
            "value": BrsBoolean {
              "kind": 1,
              "value": true,
            },
          },
        },
      ],
    },
  },
]
`;

exports[`parser if statements block if parses if-else 1`] = `
Array [
  If {
    "condition": Binary {
      "left": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 1,
        },
      },
      "right": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 2,
        },
      },
      "token": Object {
        "isReserved": false,
        "kind": 15,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "<",
      },
    },
    "elseBranch": Block {
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 21,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "value": Literal {
            "value": BrsBoolean {
              "kind": 1,
              "value": false,
            },
          },
        },
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 21,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "bar",
          },
          "value": Literal {
            "value": BrsBoolean {
              "kind": 1,
              "value": true,
            },
          },
        },
      ],
    },
    "elseIfs": Array [],
    "thenBranch": Block {
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 21,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "value": Literal {
            "value": BrsBoolean {
              "kind": 1,
              "value": true,
            },
          },
        },
      ],
    },
  },
]
`;

exports[`parser if statements block if parses if-elseif-else 1`] = `
Array [
  If {
    "condition": Binary {
      "left": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 1,
        },
      },
      "right": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 2,
        },
      },
      "token": Object {
        "isReserved": false,
        "kind": 15,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "<",
      },
    },
    "elseBranch": Block {
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 21,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "value": Literal {
            "value": BrsBoolean {
              "kind": 1,
              "value": false,
            },
          },
        },
      ],
    },
    "elseIfs": Array [
      Object {
        "condition": Binary {
          "left": Literal {
            "value": Int32 {
              "kind": 3,
              "value": 1,
            },
          },
          "right": Literal {
            "value": Int32 {
              "kind": 3,
              "value": 2,
            },
          },
          "token": Object {
            "isReserved": false,
            "kind": 17,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": ">",
          },
        },
        "thenBranch": Block {
          "statements": Array [
            Assignment {
              "name": Object {
                "isReserved": false,
                "kind": 21,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "foo",
              },
              "value": Literal {
                "value": Int32 {
                  "kind": 3,
                  "value": 3,
                },
              },
            },
            Assignment {
              "name": Object {
                "isReserved": false,
                "kind": 21,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "bar",
              },
              "value": Literal {
                "value": BrsBoolean {
                  "kind": 1,
                  "value": true,
                },
              },
            },
          ],
        },
      },
    ],
    "thenBranch": Block {
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 21,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "value": Literal {
            "value": BrsBoolean {
              "kind": 1,
              "value": true,
            },
          },
        },
      ],
    },
  },
]
`;

exports[`parser if statements single-line if allows 'then' to be skipped 1`] = `
Array [
  If {
    "condition": Binary {
      "left": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 1,
        },
      },
      "right": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 2,
        },
      },
      "token": Object {
        "isReserved": false,
        "kind": 15,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "<",
      },
    },
    "elseBranch": Block {
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 21,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "value": Literal {
            "value": BrsBoolean {
              "kind": 1,
              "value": false,
            },
          },
        },
      ],
    },
    "elseIfs": Array [
      Object {
        "condition": Binary {
          "left": Literal {
            "value": Int32 {
              "kind": 3,
              "value": 1,
            },
          },
          "right": Literal {
            "value": Int32 {
              "kind": 3,
              "value": 2,
            },
          },
          "token": Object {
            "isReserved": false,
            "kind": 19,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "=",
          },
        },
        "thenBranch": Block {
          "statements": Array [
            Assignment {
              "name": Object {
                "isReserved": false,
                "kind": 21,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "same",
              },
              "value": Literal {
                "value": BrsBoolean {
                  "kind": 1,
                  "value": true,
                },
              },
            },
          ],
        },
      },
    ],
    "thenBranch": Block {
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 21,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "value": Literal {
            "value": BrsBoolean {
              "kind": 1,
              "value": true,
            },
          },
        },
      ],
    },
  },
]
`;

exports[`parser if statements single-line if parses if only 1`] = `
Array [
  If {
    "condition": Binary {
      "left": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 1,
        },
      },
      "right": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 2,
        },
      },
      "token": Object {
        "isReserved": false,
        "kind": 15,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "<",
      },
    },
    "elseBranch": undefined,
    "elseIfs": Array [],
    "thenBranch": Block {
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 21,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "value": Literal {
            "value": BrsBoolean {
              "kind": 1,
              "value": true,
            },
          },
        },
      ],
    },
  },
]
`;

exports[`parser if statements single-line if parses if-else 1`] = `
Array [
  If {
    "condition": Binary {
      "left": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 1,
        },
      },
      "right": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 2,
        },
      },
      "token": Object {
        "isReserved": false,
        "kind": 15,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "<",
      },
    },
    "elseBranch": Block {
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 21,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "value": Literal {
            "value": BrsBoolean {
              "kind": 1,
              "value": false,
            },
          },
        },
      ],
    },
    "elseIfs": Array [],
    "thenBranch": Block {
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 21,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "value": Literal {
            "value": BrsBoolean {
              "kind": 1,
              "value": true,
            },
          },
        },
      ],
    },
  },
]
`;

exports[`parser if statements single-line if parses if-elseif-else 1`] = `
Array [
  If {
    "condition": Binary {
      "left": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 1,
        },
      },
      "right": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 2,
        },
      },
      "token": Object {
        "isReserved": false,
        "kind": 15,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "<",
      },
    },
    "elseBranch": Block {
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 21,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "value": Literal {
            "value": BrsBoolean {
              "kind": 1,
              "value": true,
            },
          },
        },
      ],
    },
    "elseIfs": Array [
      Object {
        "condition": Binary {
          "left": Literal {
            "value": Int32 {
              "kind": 3,
              "value": 1,
            },
          },
          "right": Literal {
            "value": Int32 {
              "kind": 3,
              "value": 2,
            },
          },
          "token": Object {
            "isReserved": false,
            "kind": 19,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "=",
          },
        },
        "thenBranch": Block {
          "statements": Array [
            Assignment {
              "name": Object {
                "isReserved": false,
                "kind": 21,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "same",
              },
              "value": Literal {
                "value": BrsBoolean {
                  "kind": 1,
                  "value": true,
                },
              },
            },
          ],
        },
      },
    ],
    "thenBranch": Block {
      "statements": Array [
        Assignment {
          "name": Object {
            "isReserved": false,
            "kind": 21,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "foo",
          },
          "value": Literal {
            "value": BrsBoolean {
              "kind": 1,
              "value": true,
            },
          },
        },
      ],
    },
  },
]
`;
